IRIS-4147 | Do ellipsis in css and fix alignment

--- a/extensions/wikia/DesignSystem/styles/design-system-notifications.scss
+++ b/extensions/wikia/DesignSystem/styles/design-system-notifications.scss
@@ -78,7 +78,7 @@ $notification-card-anchor-color: $notifications-dropdown-content-color;
 	@include flexbox();
 	cursor: pointer;
 	padding-left: 12px;
-	width: 30px;
+	width: 18px;
 
 	.wds-icon {
 	  fill: $wds-icon-color;
@@ -98,6 +98,7 @@ $notification-card-anchor-color: $notifications-dropdown-content-color;
 	@include justify-content(flex-start);
 	padding-left: 12px;
 	padding-right: 12px;
+	word-break: break-all;
   }
 
   &__text {
@@ -126,6 +127,16 @@ $notification-card-anchor-color: $notifications-dropdown-content-color;
 	list-style-type: none;
 	margin: 0;
 	padding: 8px 0 0;
+  }
+
+  &__community {
+	max-width: 150px;
+	text-overflow: ellipsis;
+  }
+
+  &__context-item {
+	white-space: nowrap;
+	overflow: hidden;
   }
 
   &__context-separator {
